--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 18.07.2022 08:48:16</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 18.07.2022 09:10:59</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,35 +7,35 @@
 <h5>Pondělí, 18. 07. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Bramborová se žampiony</strong>
+<strong>Houbová krémová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Vepřová plec s houbovou omáčkou a s houskovým knedlíkem NEBO těstovinou</strong>
+<strong>Vepřový pivní guláš s houskovým knedlíkem nebo těstovinou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							139,-
 						</span>
 </p>
 <p>
-<strong>Dukátové buchtičky s vanilkovým krémem</strong>
+<strong>Špagety s tomatovou omáčkou, šunkou a parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							115,-
+							135,-
 						</span>
 </p>
 <p>
-<strong>Teplý bufet: hovězí na žampionech, žebírka, zelenina, ryze, pečené brambory</strong>
+<strong>Teplý bufet: Ryba se slaninou, prirodni Vepřový plátek, rýže, Mrkvička, brambory</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							49,-
 						</span>
 </p>
 <p>
-<strong>Salátový bufet: celerový, kuskus s kapari, olivami a sušenými rajčaty, cizrnový s kari</strong>
+<strong>Salátový bufet: rajčatový, cizrnový s dresinkem ze sušených rajcat, zeleninový kuskus</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							45,-
