--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 18.07.2022 09:10:59</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 18.07.2022 09:36:48</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -125,7 +125,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickeho hejka se salsou z cerstvych rajcat s okurkami a cervenou cibuli, frijoles refritos {mexicke stouchane fazole}, salatek 149</li><li>Peceny filet z cerstveho halibuta se salsou z cerstvych rajcat s okurkami a cervenou cibuli, frijoles refritos, salatek 175</li><li>Opekane kruti kousky v omacce teryiaki s prazenym sezamem, jasminova ryze, cukemono z cuket s paprikami 149</li><li>Pikantni jeleni paprikas s palivymi slovenskymi paprikami a rajcaty, bramborove placky {L} 175</li><li>Smazena pakora {cizrnove smazenky} s mladou cervenou repou a brokolici, jogurtovy dip, jahly, salatek 149</li></ol>
+None
 </td>
 </tr>
 </table>
