--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 19.07.2022 08:15:35</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 19.07.2022 08:45:37</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,21 +7,28 @@
 <h5>Úterý, 19. 07. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Houbová krémová</strong>
+<strong>Cizrnová s kari a kokosem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Vepřový pivní guláš s houskovým knedlíkem nebo těstovinou</strong>
+<strong>Smažený gordon bleu s vařeným bramborem a tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							139,-
 						</span>
 </p>
 <p>
-<strong>Špagety amatraciana a parmazánem</strong>
+<strong>Houbové rizoto se sýrem, okurkou NEBO řepou</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							133,-
+						</span>
+</p>
+<p>
+<strong>Míchaný salát se smaženými kuřecími paličkami</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
@@ -57,6 +64,21 @@
 <div class="cena">59 Kč</div>
 <div class="clear"></div>
 </li>
+<li class="poznamka">
+<div class="polozka">Brownie </div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ovocný salát</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Bavorská bageta s kuřecím masem a dijonskou hořčicí</div>
+<div class="cena">89 Kč</div>
+<div class="clear"></div>
+</li>
 <li class="polevka">
 <div class="polozka">300ml Pikantní tomatová polévka s bazalkou; v menu <em title="Celer">9</em></div>
 <div class="cena">39 Kč</div>
@@ -68,12 +90,12 @@
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Kuřecí supreme na citronu a kardamon, restovaná pohanka se slaninou <em title="Mléko">7</em></div>
+<div class="polozka"><span class="poradi">1. </span>150g Kuřecí supreme na citronu a kardamonu, restovaná pohanka se slaninou <em title="Mléko">7</em></div>
 <div class="cena">165 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Vepřová pečeně s glazovanými jablky, česnekovo-bramborová kaše <em title="Mléko">7</em></div>
+<div class="polozka"><span class="poradi">2. </span>150g Vepřová pečeně s glazovanými jablky, česnekovo-bramborová kaše <em title="Mléko">7</em><em title="Hořčice">10</em></div>
 <div class="cena">159 Kč</div>
 <div class="clear"></div>
 </li>
